--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,18 @@
 
 services:
+  php:
+    image: php:8.2-cli
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: php -S 0.0.0.0:8000 -t public
+    depends_on:
+      - database
+    build:
+      context: .
+      dockerfile: Dockerfile
 ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
@@ -18,6 +31,7 @@ services:
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
+
 
 volumes:
 ###> doctrine/doctrine-bundle ###
